--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^15.0.0",
+    "@ckeditor/ckeditor5-react": "^1.1.3",
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
