thunk middleware api draftjs

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@ckeditor/ckeditor5-build-classic": "^15.0.0",
     "@ckeditor/ckeditor5-react": "^1.1.3",
     "axios": "^0.19.0",
+    "draft-js": "^0.11.2",
+    "draft-js-export-html": "^1.4.1",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.3",
