--- a/package.json
+++ b/package.json
@@ -2,45 +2,14 @@
   "name": "nosbir",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^15.0.0",
-    "@ckeditor/ckeditor5-react": "^1.1.3",
-    "axios": "^0.19.0",
-    "draft-js": "^0.11.2",
-    "draft-js-export-html": "^1.4.1",
-    "jwt-decode": "^2.2.0",
-    "prop-types": "^15.7.2",
-    "query-string": "^6.8.3",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-modal": "^3.10.1",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-toastify": "^5.4.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "string-strip-html": "^4.3.5"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "next": "9.1.2",
+    "react": "16.11.0",
+    "react-dom": "16.11.0"
   }
 }
