--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nosbir",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node":"12.13.1"
+  },
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
